--- a/rememmung_fe/tsconfig.json
+++ b/rememmung_fe/tsconfig.json
@@ -18,7 +18,20 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "baseUrl": "src",
+    "paths": {
+      "@assets/*": ["assets/*"],
+      //"@axios/*": ["axios/*"],
+      "@components/*": ["components/*"],
+      "@hooks/*": ["hooks/*"],
+      "@layout/*": ["layout/*"],
+      "@pages/*": ["pages/*"]
+      //"@recoil/*": ["recoil/*"],
+      //"@server/*": ["server/*"],
+      //"@utils/*": ["utils/*"]
+    }
   },
   "include": ["src", "custom.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
