feat: 카카오 토큰 발급

--- a/rememmung_fe/tsconfig.json
+++ b/rememmung_fe/tsconfig.json
@@ -27,9 +27,9 @@
       "@components/*": ["components/*"],
       "@hooks/*": ["hooks/*"],
       "@layout/*": ["layout/*"],
-      "@pages/*": ["pages/*"]
+      "@pages/*": ["pages/*"],
       //"@recoil/*": ["recoil/*"],
-      //"@server/*": ["server/*"],
+      "@server/*": ["server/*"]
       //"@utils/*": ["utils/*"]
     }
   },
