--- a/rememmung_fe/package.json
+++ b/rememmung_fe/package.json
@@ -18,6 +18,8 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-spinners": "^0.13.8",
+    "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "styled-components": "^6.1.11",
     "vite-tsconfig-paths": "^4.3.2"
   },
